
[tool.poetry]
name = "zen_intership_project"
version = "0.1.0"
description = ""
authors = ["fuckkilla <f.cloudtamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
